ganti judul tittle barang

--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
                 <div class="container">
                     <div class="row">
                         <div class="col-lg-12">
-                            <h1>2019</h1>
+                            <h1>2020</h1>
                             <h2>Lookbook.</h2>
                             <a href="#" class="primary-btn">See More</a>
                         </div>
@@ -124,7 +124,7 @@
                 <div class="container">
                     <div class="row">
                         <div class="col-lg-12">
-                            <h1>2019</h1>
+                            <h1>2020</h1>
                             <h2>Lookbook.</h2>
                             <a href="#" class="primary-btn">See More</a>
                         </div>
@@ -135,7 +135,7 @@
                 <div class="container">
                     <div class="row">
                         <div class="col-lg-12">
-                            <h1>2019</h1>
+                            <h1>2020</h1>
                             <h2>Lookbook.</h2>
                             <a href="#" class="primary-btn">See More</a>
                         </div>
@@ -188,7 +188,7 @@
                                 <div class="single-box-item first-box">
                                     <img src="img/f-box-1.jpg" alt="">
                                     <div class="box-text">
-                                        <span class="trend-year">2019 Party</span>
+                                        <span class="trend-year">2020 Party</span>
                                         <h2>Jewelry</h2>
                                         <span class="trend-alert">Trend Allert</span>
                                         <a href="#" class="primary-btn">See More</a>
@@ -199,7 +199,7 @@
                                 <div class="single-box-item second-box">
                                     <img src="img/f-box-2.jpg" alt="">
                                     <div class="box-text">
-                                        <span class="trend-year">2019 Trend</span>
+                                        <span class="trend-year">2020 Trend</span>
                                         <h2>Footwear</h2>
                                         <span class="trend-alert">Bold & Black</span>
                                     </div>
@@ -211,7 +211,7 @@
                         <div class="single-box-item large-box">
                             <img src="img/f-box-3.jpg" alt="">
                             <div class="box-text">
-                                <span class="trend-year">2019 Party</span>
+                                <span class="trend-year">2020 Party</span>
                                 <h2>Collection</h2>
                                 <div class="trend-alert">Trend Allert</div>
                             </div>
@@ -234,10 +234,10 @@
                         </div>
                         <ul class="product-controls">
                             <li data-filter="*">All</li>
-                            <li data-filter=".dresses">Dresses</li>
-                            <li data-filter=".bags">Bags</li>
-                            <li data-filter=".shoes">Shoes</li>
-                            <li data-filter=".accesories">Accesories</li>
+                            <li data-filter=".dresses">T-Shirt</li>
+                            <li data-filter=".bags">Cup</li>
+                            <li data-filter=".shoes">Beanie</li>
+                            <li data-filter=".accesories">bag</li>
                         </ul>
                     </div>
                 </div>
@@ -350,7 +350,7 @@
                 <div class="col-lg-4 offset-lg-1">
                     <div class="lookbok-left">
                         <div class="section-title">
-                            <h2>2019 <br />#lookbook</h2>
+                            <h2>2020 <br />#lookbook</h2>
                         </div>
                         <p>Fusce urna quam, euismod sit amet mollis quis, vestibulum quis velit. Vestibulum malesuada
                             aliquet libero viverra cursus. Aliquam erat volutpat. Morbi id dictum quam, ut commodo
@@ -428,7 +428,7 @@
                             <ul>
                                 <li>Search</li>
                                 <li>Privacy Policy</li>
-                                <li>2019 Lookbook</li>
+                                <li>2020 Lookbook</li>
                                 <li>Shipping & Delivery</li>
                                 <li>Gallery</li>
                             </ul>
