--- a/index.html
+++ b/index.html
@@ -152,28 +152,10 @@
             <div class="container">
                 <div class="row">
                     <div class="col-lg-4">
-                        <div class="single-features-ads first">
-                            <img src="img/icons/f-delivery.png" alt="">
-                            <h4>Free shipping</h4>
-                            <p>Fusce urna quam, euismod sit amet mollis quis, vestibulum quis velit. Vesti bulum mal
-                                esuada aliquet libero viverra cursus. </p>
-                        </div>
                     </div>
                     <div class="col-lg-4">
-                        <div class="single-features-ads second">
-                            <img src="img/icons/coin.png" alt="">
-                            <h4>100% Money back </h4>
-                            <p>Urna quam, euismod sit amet mollis quis, vestibulum quis velit. Vesti bulum mal esuada
-                                aliquet libero viverra cursus. </p>
-                        </div>
                     </div>
                     <div class="col-lg-4">
-                        <div class="single-features-ads">
-                            <img src="img/icons/chat.png" alt="">
-                            <h4>Online support 24/7</h4>
-                            <p>Urna quam, euismod sit amet mollis quis, vestibulum quis velit. Vesti bulum mal esuada
-                                aliquet libero viverra cursus. </p>
-                        </div>
                     </div>
                 </div>
             </div>
@@ -188,8 +170,8 @@
                                 <div class="single-box-item first-box">
                                     <img src="img/f-box-1.jpg" alt="">
                                     <div class="box-text">
-                                        <span class="trend-year">2020 Party</span>
-                                        <h2>Jewelry</h2>
+                                        <span class="trend-year">2020</span>
+                                        <h2>T-Shirt</h2>
                                         <span class="trend-alert">Trend Allert</span>
                                         <a href="#" class="primary-btn">See More</a>
                                     </div>
@@ -246,7 +228,7 @@
                 <div class="col-lg-3 col-sm-6 mix all dresses bags">
                     <div class="single-product-item">
                         <figure>
-                            <a href="#"><img src="img/products/img-1.jpg" alt=""></a>
+                            <a href="#"><img src="img/products/GAMBAR 1.jpg" alt=""></a>
                             <div class="p-status">new</div>
                         </figure>
                         <div class="product-text">
