--- a/index.html
+++ b/index.html
@@ -232,8 +232,8 @@
                             <div class="p-status">new</div>
                         </figure>
                         <div class="product-text">
-                            <h6>Green Dress with details</h6>
-                            <p>$22.90</p>
+                            <h6>T-Shirt Logo WB</h6>
+                            <p>Rp. 135.000</p>
                         </div>
                     </div>
                 </div>
