--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
                 <div class="col-lg-3 col-sm-6 mix all dresses bags">
                     <div class="single-product-item">
                         <figure>
-                            <a href="#"><img src="img/products/img-2.jpg" alt=""></a>
+                            <a href="#"><img src="img/products/GAMBAR 3.jpg" alt=""></a>
                             <div class="p-status sale">sale</div>
                         </figure>
                         <div class="product-text">
