ganti keterangan gambar 3

--- a/index.html
+++ b/index.html
@@ -244,8 +244,8 @@
                             <div class="p-status sale">sale</div>
                         </figure>
                         <div class="product-text">
-                            <h6>Yellow Maxi Dress</h6>
-                            <p>$25.90</p>
+                            <h6>T-Shirt artfont</h6>
+                            <p>Rp. 135.000</p>
                         </div>
                     </div>
                 </div>
