--- a/index.html
+++ b/index.html
@@ -252,7 +252,7 @@
                 <div class="col-lg-3 col-sm-6 mix all shoes accesories">
                     <div class="single-product-item">
                         <figure>
-                            <a href="#"><img src="img/products/img-3.jpg" alt=""></a>
+                            <a href="#"><img src="img/products/GAMBAR 2.jpg" alt=""></a>
                             <div class="p-status">new</div>
                         </figure>
                         <div class="product-text">
