ganti keterangan dan harga gambar 2

--- a/index.html
+++ b/index.html
@@ -256,8 +256,8 @@
                             <div class="p-status">new</div>
                         </figure>
                         <div class="product-text">
-                            <h6>One piece bodysuit</h6>
-                            <p>$19.90</p>
+                            <h6>T-Shirt Black Fontt</h6>
+                            <p>Rp. 135.000</p>
                         </div>
                     </div>
                 </div>
