ganti gambar 2 keterangan dan harga

--- a/index.html
+++ b/index.html
@@ -276,12 +276,12 @@
                 <div class="col-lg-3 col-sm-6 mix all dresses shoes">
                     <div class="single-product-item">
                         <figure>
-                            <a href="#"><img src="img/products/img-5.jpg" alt=""></a>
+                            <a href="#"><img src="img/products/GAMBAR 2.jpg" alt=""></a>
                             <div class="p-status">new</div>
                         </figure>
                         <div class="product-text">
-                            <h6>Green Dress with details</h6>
-                            <p>$22.90</p>
+                            <h6>T-Shirt Black Font</h6>
+                            <p>Rp. 135.000</p>
                         </div>
                     </div>
                 </div>
