--- a/index.html
+++ b/index.html
@@ -228,12 +228,12 @@
                 <div class="col-lg-3 col-sm-6 mix all dresses bags">
                     <div class="single-product-item">
                         <figure>
-                            <a href="#"><img src="img/products/GAMBAR 4.jpg" alt=""></a>
+                            <a href="#"><img src="img/products/GAMBAR 1.jpg" alt=""></a>
                             <div class="p-status">new</div>
                         </figure>
                         <div class="product-text">
-                            <h6>Cup Font Cream</h6>
-                            <p>Rp. 100.000</p>
+                            <h6>T-Shirt Black</h6>
+                            <p>Rp. 135.000</p>
                         </div>
                     </div>
                 </div>
