--- a/index.html
+++ b/index.html
@@ -240,12 +240,12 @@
                 <div class="col-lg-3 col-sm-6 mix all dresses bags">
                     <div class="single-product-item">
                         <figure>
-                            <a href="#"><img src="img/products/GAMBAR 5.jpg" alt=""></a>
+                            <a href="#"><img src="img/products/GAMBAR 2.jpg" alt=""></a>
                             <div class="p-status sale">sale</div>
                         </figure>
                         <div class="product-text">
-                            <h6>Cup Authentic Black</h6>
-                            <p>Rp. 100.000</p>
+                            <h6>T-Shirt FontArt Black</h6>
+                            <p>Rp. 135.000</p>
                         </div>
                     </div>
                 </div>
