ganti gambar 11 dan 12

--- a/index.html
+++ b/index.html
@@ -240,12 +240,12 @@
                 <div class="col-lg-3 col-sm-6 mix all dresses bags">
                     <div class="single-product-item">
                         <figure>
-                            <a href="#"><img src="img/products/GAMBAR 2.jpg" alt=""></a>
+                            <a href="#"><img src="img/products/GAMBAR 11.jpg" alt=""></a>
                             <div class="p-status sale">sale</div>
                         </figure>
                         <div class="product-text">
-                            <h6>T-Shirt FontArt Black</h6>
-                            <p>Rp. 135.000</p>
+                            <h6>Beanie Yellow</h6>
+                            <p>Rp. 100.000</p>
                         </div>
                     </div>
                 </div>
@@ -264,12 +264,12 @@
                 <div class="col-lg-3 col-sm-6 mix all shoes accesories">
                     <div class="single-product-item">
                         <figure>
-                            <a href="#"><img src="img/products/img-4.jpg" alt=""></a>
+                            <a href="#"><img src="img/products/GAMBAR 12.jpg" alt=""></a>
                             <div class="p-status popular">popular</div>
                         </figure>
                         <div class="product-text">
-                            <h6>Blue Dress with details</h6>
-                            <p>$35.50</p>
+                            <h6>Beanie Black</h6>
+                            <p>Rp. 100.000</p>
                         </div>
                     </div>
                 </div>
