--- a/index.html
+++ b/index.html
@@ -288,12 +288,12 @@
                 <div class="col-lg-3 col-sm-6 mix all accesories bags">
                     <div class="single-product-item">
                         <figure>
-                            <a href="#"><img src="img/products/img-6.jpg" alt=""></a>
+                            <a href="#"><img src="img/products/GAMBAR 10.jpg" alt=""></a>
                             <div class="p-status sale">sale</div>
                         </figure>
                         <div class="product-text">
-                            <h6>Yellow Maxi Dress</h6>
-                            <p>$25.90</p>
+                            <h6>Bag Black</h6>
+                            <p>Rp. 120.000</p>
                         </div>
                     </div>
                 </div>
