--- a/index.html
+++ b/index.html
@@ -306,12 +306,12 @@
                 <div class="col-lg-3 col-sm-6 mix all accesories bags">
                     <div class="single-product-item">
                         <figure>
-                            <a href="#"><img src="img/products/img-8.jpg" alt=""></a>
+                            <a href="#"><img src="img/products/GAMBAR 6.jpg" alt=""></a>
                             <div class="p-status popular">popular</div>
                         </figure>
                         <div class="product-text">
-                            <h6>Blue Dress with details</h6>
-                            <p>$35.50</p>
+                            <h6>SLINGBAG BLACK</h6>
+                            <p>Rp. 120.000</p>
                         </div>
                     </div>
                 </div>
