--- a/index.html
+++ b/index.html
@@ -264,11 +264,11 @@
                 <div class="col-lg-3 col-sm-6 mix all shoes accesories">
                     <div class="single-product-item">
                         <figure>
-                            <a href="#"><img src="img/products/GAMBAR 12.jpg" alt=""></a>
+                            <a href="#"><img src="img/products/GAMBAR 5.jpg" alt=""></a>
                             <div class="p-status popular">popular</div>
                         </figure>
                         <div class="product-text">
-                            <h6>Beanie Black</h6>
+                            <h6>Cup Black</h6>
                             <p>Rp. 100.000</p>
                         </div>
                     </div>
