--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         <div class="container-fluid">
             <div class="inner-header">
                 <div class="logo">
-                    <a href="./index.html"><img src="img/logo.jpg" alt=""></a>
+                    <a href="./index.html"><img src="img/logo.jpg<h2>Lookbook.</h2> alt=""></a>
                 </div>
                 <div class="header-right">
                     <img src="img/icons/search.png" alt="" class="search-trigger">
@@ -114,7 +114,7 @@
                     <div class="row">
                         <div class="col-lg-12">
                             <h1>2020</h1>
-                            <h2>Lookbook.</h2>
+                            <h2>Welcome Waveblast</h2>
                             <a href="#" class="primary-btn">See More</a>
                         </div>
                     </div>
