--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
             </div>
         </div>
     </header>
-    <!-- Header Info Begin -->
+    <!-- Header Info Begin 
     <div class="header-info">
         <div class="container-fluid">
             <div class="row">
@@ -103,7 +103,7 @@
             </div>
         </div>
     </div>
-    <!-- Header Info End -->
+   Header Info End -->
     <!-- Header End -->
 
     <!-- Hero Slider Begin -->
@@ -362,7 +362,7 @@
     </div>
     <!-- Logo Section End -->
 
-    <!-- Footer Section Begin -->
+    <!-- Footer Section Begin 
     <footer class="footer-section spad">
         <div class="container">
             <div class="newslatter-form">
@@ -449,7 +449,7 @@
 
 		</div>
     </footer>
-    <!-- Footer Section End -->
+     Footer Section End -->
 
     <!-- Js Plugins -->
     <script src="js/jquery-3.3.1.min.js"></script>
