--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
     </section>
     <!-- Hero Slider End -->
 
-    <!-- Features Section Begin -->
+    <!-- Features Section Begin 
     <section class="features-section spad">
         <div class="features-ads">
             <div class="container">
@@ -203,7 +203,7 @@
             </div>
         </div>
     </section>
-    <!-- Features Section End -->
+     Features Section End -->
 
     <!-- Latest Product Begin -->
     <section class="latest-products spad">
