--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
                 </div>
             </div>
         </div>
-        <!-- Features Box -->
+        <!-- Features Box 
         <div class="features-box">
             <div class="container">
                 <div class="row">
