--- a/index.html
+++ b/index.html
@@ -325,12 +325,7 @@
         <div class="container-fluid">
             <div class="row">
                 <div class="col-lg-4 offset-lg-1">
-                    <div class="lookbok-left">
-                        <div class="section-title">
-                            <h2>2020 <br />#lookbook</h2>
-                        </div>
-                        <a href="#" class="primary-btn look-btn">See More</a>
-                    </div>
+                    
                 </div>
             </div>
         </div>
@@ -338,7 +333,7 @@
     
     <!-- Logo Section End -->
 
-    <!-- Footer Section Begin 
+    <!-- Footer Section Begin -->
     <footer class="footer-section spad">
         <div class="container">
             <div class="newslatter-form">
@@ -425,7 +420,7 @@
 
 		</div>
     </footer>
-     Footer Section End -->
+     <!-- Footer Section End -->
 
     <!-- Js Plugins -->
     <script src="js/jquery-3.3.1.min.js"></script>
