--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
                     <div class="row">
                         <div class="col-lg-12">
                             <h1>2020</h1>
-                            <h2>Welcome Waveblast</h2>
+                            <h2>Welcome</h2>
                             <a href="#" class="primary-btn">See More</a>
                         </div>
                     </div>
@@ -107,7 +107,7 @@
                 <div class="container">
                     <div class="row">
                         <div class="col-lg-12">
-                            <h1>2020</h1>
+                            <h1>Bahan Lembut</h1>
                             <h2>Lookbook.</h2>
                             <a href="#" class="primary-btn">See More</a>
                         </div>
@@ -118,8 +118,8 @@
                 <div class="container">
                     <div class="row">
                         <div class="col-lg-12">
-                            <h1>2020</h1>
-                            <h2>Lookbook.</h2>
+                            <h1>Cotton Combed</h1>
+                            <h2>Kami menggunakan </h2>
                             <a href="#" class="primary-btn">See More</a>
                         </div>
                     </div>
