--- a/index.html
+++ b/index.html
@@ -55,9 +55,11 @@
                 <nav class="main-menu mobile-menu">
                     <ul>
                         <li><a class="active" href="./index.html">Home</a></li>
-                        
                     </ul>
-                </nav>
+		    <ul>
+			<a href="./contact.html">Contact</a>
+		    </ul>
+		</nav>
             </div>
         </div>
     </header>
