--- a/index.html
+++ b/index.html
@@ -55,10 +55,11 @@
                 <nav class="main-menu mobile-menu">
                     <ul>
                         <li><a class="active" href="./index.html">Home</a></li>
+			    <li><a href="./contact.html">Contact</a></li>
                     </ul>
-		    <ul>
-			<a href="./contact.html">Contact</a>
-		    </ul>
+		    
+			
+		    
 		</nav>
             </div>
         </div>
