--- a/contact.html
+++ b/contact.html
@@ -48,14 +48,14 @@
                 <div class="logo">
                     <a href="./index.html"><img src="img/logo.png" alt=""></a>
                 </div>
-                <div class="header-right">
+                <!-- <div class="header-right">
                     <img src="img/icons/search.png" alt="" class="search-trigger">
                     <img src="img/icons/man.png" alt="">
                     <a href="#">
                         <img src="img/icons/bag.png" alt="">
                         <span>2</span>
                     </a>
-                </div>
+                </div> -->
                 <div class="user-access">
                     <a href="#">Register</a>
                     <a href="#" class="in">Sign in</a>
@@ -82,11 +82,11 @@
     <div class="header-info">
         <div class="container-fluid">
             <div class="row">
-                <div class="col-md-4">
+                <!-- <div class="col-md-4">
                     <div class="header-item">
                         <img src="img/icons/delivery.png" alt="">
                         <p>Free shipping on orders over $30 in USA</p>
-                    </div>
+                    </div> -->
                 </div>
                 <div class="col-md-4 text-left text-lg-center">
                     <div class="header-item">
@@ -116,7 +116,7 @@
                     </div>
                 </div>
                 <div class="col-lg-8">
-                    <img src="img/add.jpg" alt="">
+                    <!-- <img src="img/add.jpg" alt=""> -->
                 </div>
             </div>
         </div>
@@ -127,7 +127,7 @@
     <div class="contact-section">
         <div class="container">
             <div class="row">
-                <div class="col-lg-8">
+                <!-- <div class="col-lg-8">
                     <form action="#" class="contact-form">
                         <div class="row">
                             <div class="col-lg-6">
@@ -146,7 +146,7 @@
                             </div>
                         </div>
                     </form>
-                </div>
+                </div> -->
                 <div class="col-lg-3 offset-lg-1">
                     <div class="contact-widget">
                         <div class="cw-item">
