--- a/contact.html
+++ b/contact.html
@@ -29,7 +29,7 @@
     <div id="preloder">
         <div class="loader"></div>
     </div>
-    
+
     <!-- Search model -->
 	<div class="search-model">
 		<div class="h-100 d-flex align-items-center justify-content-center">
@@ -152,22 +152,22 @@
                         <div class="cw-item">
                             <h5>Location</h5>
                             <ul>
-                                <li>1525 Awesome Lane, </li>
-                                <li>Los Angeles, CA</li>
+                                <li>Jl. Raya Anyer No. 3 (Samping Bank Mandiri) , </li>
+                                <li>Los Anyer, CA</li>
                             </ul>
                         </div>
                         <div class="cw-item">
                             <h5>Phone</h5>
                             <ul>
-                                <li>+1 (603)535-4592</li>
-                                <li>+1 (603)535-4556</li>
+                                <li>+62 81774990494</li>
+                                <li>+62 81311970383</li>
                             </ul>
                         </div>
                         <div class="cw-item">
                             <h5>E-mail</h5>
                             <ul>
-                                <li>contact@violetstore.com</li>
-                                <li>www.violetstore.com</li>
+                                <li>waveblastco@gmail.com</li>
+                                <li>waveblaststore@yahoo.com</li>
                             </ul>
                         </div>
                     </div>
