--- a/contact.html
+++ b/contact.html
@@ -177,7 +177,7 @@
                 <div class="row">
                     <div class="col-lg-12">
                         <iframe
-                            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d26440.72384129847!2d-118.24906619231132!3d34.06719475913053!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x80c2c659f50c318d%3A0xe2ffb80a9d3820ae!2sChinatown%2C%20Los%20Angeles%2C%20CA%2C%20USA!5e0!3m2!1sen!2sbd!4v1570213740685!5m2!1sen!2sbd"
+                            src="https://www.google.com/maps/place/Kec.+Anyar,+Serang,+Banten/@-6.0935689,105.8870289,13z/data=!3m1!4b1!4m5!3m4!1s0x2e4186883dac9f7f:0xe2254b73098a864!8m2!3d-6.0924606!4d105.9112424"
                             height="560" style="border:0;" allowfullscreen=""></iframe>
                     </div>
                 </div>
