--- a/contact.html
+++ b/contact.html
@@ -79,7 +79,7 @@
         </div>
     </header>
     <!-- Header Info Begin -->
-    <div class="header-info">
+   <!-- <div class="header-info">
         <div class="container-fluid">
             <div class="row">
                 <div class="col-md-4">
@@ -102,7 +102,7 @@
                 </div>
             </div>
         </div>
-    </div>
+    </div> -->
     <!-- Header Info End -->
     <!-- Header End -->
 
@@ -115,9 +115,9 @@
                         <h2>Contact us<span>.</span></h2>
                     </div>
                 </div>
-                <div class="col-lg-8">
+               <!-- <div class="col-lg-8">
                     <img src="img/add.jpg" alt="">
-                </div>
+                </div> -->
             </div>
         </div>
     </section>
@@ -127,7 +127,7 @@
     <div class="contact-section">
         <div class="container">
             <div class="row">
-                <div class="col-lg-8">
+                <!--<div class="col-lg-8">
                     <form action="#" class="contact-form">
                         <div class="row">
                             <div class="col-lg-6">
@@ -146,28 +146,28 @@
                             </div>
                         </div>
                     </form>
-                </div>
+                </div> -->
                 <div class="col-lg-3 offset-lg-1">
                     <div class="contact-widget">
                         <div class="cw-item">
-                            <h5>Location</h5>
+                            <h5>Visi</h5>
                             <ul>
                                 <li>1525 Awesome Lane, </li>
                                 <li>Los Angeles, CA</li>
                             </ul>
                         </div>
                         <div class="cw-item">
-                            <h5>Phone</h5>
+                            <h5>Misi</h5>
                             <ul>
                                 <li>+1 (603)535-4592</li>
                                 <li>+1 (603)535-4556</li>
                             </ul>
                         </div>
                         <div class="cw-item">
-                            <h5>E-mail</h5>
+                            <h5>Sejarah</h5>
                             <ul>
                                 <li>contact@violetstore.com</li>
-                                <li>www.violetstore.com</li>
+                                
                             </ul>
                         </div>
                     </div>
