--- a/contact.html
+++ b/contact.html
@@ -49,29 +49,20 @@
                     <a href="./index.html"><img src="img/logo.png" alt=""></a>
                 </div>
                 <div class="header-right">
-                    <img src="img/icons/search.png" alt="" class="search-trigger">
+                   <!-- <img src="img/icons/search.png" alt="" class="search-trigger">
                     <img src="img/icons/man.png" alt="">
                     <a href="#">
                         <img src="img/icons/bag.png" alt="">
                         <span>2</span>
-                    </a>
+                    </a> -->
                 </div>
                 <div class="user-access">
-                    <a href="#">Register</a>
-                    <a href="#" class="in">Sign in</a>
+                    <!-- <a href="#">Register</a>
+                    <a href="#" class="in">Sign in</a> -->
                 </div>
                 <nav class="main-menu mobile-menu">
                     <ul>
                         <li><a href="./index.html">Home</a></li>
-                        <li><a href="./categories.html">Shop</a>
-                            <ul class="sub-menu">
-                                <li><a href="product-page.html">Product Page</a></li>
-                                <li><a href="shopping-cart.html">Shopping Card</a></li>
-                                <li><a href="check-out.html">Check out</a></li>
-                            </ul>
-                        </li>
-                        <li><a href="./product-page.html">About</a></li>
-                        <li><a href="./check-out.html">Blog</a></li>
                         <li><a class="active" href="./contact.html">Contact</a></li>
                     </ul>
                 </nav>
