--- a/contact.html
+++ b/contact.html
@@ -164,7 +164,7 @@
                     </div>
                 </div>
             </div>
-            <div class="map">
+           <!-- <div class="map">
                 <div class="row">
                     <div class="col-lg-12">
                         <iframe
@@ -172,7 +172,7 @@
                             height="560" style="border:0;" allowfullscreen=""></iframe>
                     </div>
                 </div>
-            </div>
+            </div> -->
         </div>
     </div>
     <!-- Contact Section End -->
