--- a/contact.html
+++ b/contact.html
@@ -196,11 +196,11 @@
                         <div class="single-footer-widget">
                             <h4>About us</h4>
                             <ul>
-                                <li>About Us</li>
+                              <!--  <li>About Us</li>
                                 <li>Community</li>
                                 <li>Jobs</li>
                                 <li>Shipping</li>
-                                <li>Contact Us</li>
+                                <li>Contact Us</li> -->
                             </ul>
                         </div>
                     </div>
@@ -208,23 +208,23 @@
                         <div class="single-footer-widget">
                             <h4>Customer Care</h4>
                             <ul>
-                                <li>Search</li>
+                               <!-- <li>Search</li>
                                 <li>Privacy Policy</li>
                                 <li>2019 Lookbook</li>
                                 <li>Shipping & Delivery</li>
                                 <li>Gallery</li>
-                            </ul>
+                            </ul> -->
                         </div>
                     </div>
                     <div class="col-lg-3 col-sm-6">
                         <div class="single-footer-widget">
                             <h4>Our Services</h4>
                             <ul>
-                                <li>Free Shipping</li>
+                               <!-- <li>Free Shipping</li>
                                 <li>Free Returnes</li>
                                 <li>Our Franchising</li>
                                 <li>Terms and conditions</li>
-                                <li>Privacy Policy</li>
+                                <li>Privacy Policy</li> -->
                             </ul>
                         </div>
                     </div>
@@ -232,11 +232,11 @@
                         <div class="single-footer-widget">
                             <h4>Information</h4>
                             <ul>
-                                <li>Payment methods</li>
+                             <!--   <li>Payment methods</li>
                                 <li>Times and shipping costs</li>
                                 <li>Product Returns</li>
                                 <li>Shipping methods</li>
-                                <li>Conformity of the products</li>
+                                <li>Conformity of the products</li> -->
                             </ul>
                         </div>
                     </div>
@@ -245,14 +245,14 @@
         </div>
         <div class="social-links-warp">
 			<div class="container">
-				<div class="social-links">
+				<!-- <div class="social-links">
 					<a href="" class="instagram"><i class="fa fa-instagram"></i><span>instagram</span></a>
 					<a href="" class="pinterest"><i class="fa fa-pinterest"></i><span>pinterest</span></a>
 					<a href="" class="facebook"><i class="fa fa-facebook"></i><span>facebook</span></a>
 					<a href="" class="twitter"><i class="fa fa-twitter"></i><span>twitter</span></a>
 					<a href="" class="youtube"><i class="fa fa-youtube"></i><span>youtube</span></a>
 					<a href="" class="tumblr"><i class="fa fa-tumblr-square"></i><span>tumblr</span></a>
-				</div>
+				</div> -->
 			</div>
 
 <div class="container text-center pt-5">
