--- a/contact.html
+++ b/contact.html
@@ -63,7 +63,7 @@
                 <nav class="main-menu mobile-menu">
                     <ul>
                         <li><a href="./index.html">Home</a></li>
-                        <li><a class="active" href="./contact.html">Contact</a></li>
+                        <li><a class="active" href="./contact.html">Visi & Misi</a></li>
                     </ul>
                 </nav>
             </div>
@@ -101,9 +101,9 @@
     <section class="page-add">
         <div class="container">
             <div class="row">
-                <div class="col-lg-4">
+                <div class="row">
                     <div class="page-breadcrumb">
-                        <h2>Contact us<span>.</span></h2>
+                        <h2>Visi & Misi<span>.</span></h2>
                     </div>
                 </div>
                <!-- <div class="col-lg-8">
@@ -183,10 +183,10 @@
             <div class="newslatter-form">
                 <div class="row">
                     <div class="col-lg-12">
-                        <form action="#">
+                      <!--  <form action="#">
                             <input type="text" placeholder="Your email address">
                             <button type="submit">Subscribe to our newsletter</button>
-                        </form>
+                        </form> -->
                     </div>
                 </div>
             </div>
@@ -194,7 +194,7 @@
                 <div class="row">
                     <div class="col-lg-3 col-sm-6">
                         <div class="single-footer-widget">
-                            <h4>About us</h4>
+                            <h4></h4>
                             <ul>
                               <!--  <li>About Us</li>
                                 <li>Community</li>
@@ -206,7 +206,7 @@
                     </div>
                     <div class="col-lg-3 col-sm-6">
                         <div class="single-footer-widget">
-                            <h4>Customer Care</h4>
+                            <h4></h4>
                             <ul>
                                <!-- <li>Search</li>
                                 <li>Privacy Policy</li>
@@ -218,7 +218,7 @@
                     </div>
                     <div class="col-lg-3 col-sm-6">
                         <div class="single-footer-widget">
-                            <h4>Our Services</h4>
+                            <h4></h4>
                             <ul>
                                <!-- <li>Free Shipping</li>
                                 <li>Free Returnes</li>
@@ -230,7 +230,7 @@
                     </div>
                     <div class="col-lg-3 col-sm-6">
                         <div class="single-footer-widget">
-                            <h4>Information</h4>
+                            <h4></h4>
                             <ul>
                              <!--   <li>Payment methods</li>
                                 <li>Times and shipping costs</li>
