--- a/contact.html
+++ b/contact.html
@@ -143,21 +143,44 @@
                         <div class="cw-item">
                             <h5>Visi</h5>
                             <ul>
-                                <li>1525 Awesome Lane, </li>
-                                <li>Los Angeles, CA</li>
+                                <li>Menjadikan toko pakaian yang bisa menyediakan produk
+lokal yang berkualitas dengan harga yang terjangkau, sehingga
+kami bisa menjadi toko pakaian no 1 di kalangan brand dan bisa
+menjadikan fashion untuk kalangan anak muda.</li>
+                                
                             </ul>
                         </div>
                         <div class="cw-item">
                             <h5>Misi</h5>
                             <ul>
-                                <li>+1 (603)535-4592</li>
-                                <li>+1 (603)535-4556</li>
+                                <li>1. Selalu meningkatkan produk yang berkualitas agar banyak
+konsumen yang menyukainya
+</li>
+                                <li>2. Menjadikan toko itu sendiri bekembang dan dikenali
+banyak orang
+</li>
+				<li>3. Memberikan pelayanan, mutu dan kepuasan yang terbaik
+pada konsumen</li>
                             </ul>
                         </div>
                         <div class="cw-item">
                             <h5>Sejarah</h5>
                             <ul>
-                                <li>contact@violetstore.com</li>
+                                <li>Toko Waveblast merupakan sebuah bisnis yang bergerak
+dibidang pakaian pria/wanita dengan dominan pakaian pria. Untuk
+posisi-posisi terpenting di perusahaan seperti pimpinan, bagian
+keuangan, dan bagian kasir dipegang oleh owner dan anggota team nya.
+Toko pakaian Waveblast berdiri pada tanggal 27 Agustus 2017, pendiri
+Toko Waveblast ini adalah Wibby Algifari sekaligus pemilik Toko
+Waveblast, yang beralamat di JL. Raya Anyer No. 03 (Samping bank
+mandiri). Pemilik toko memilih nama Waveblast terinspirasi dari anak
+surfing karena di daerah Anyer adalah wisata pantai dan banyak
+komunitas surfing maka dari itu pemilik toko memilih nama toko
+Waveblast yang artinya Ledakan Ombak, karena memainkan surfing itu
+sendiri membutuhkan ombak yang cukup bagus dan pemilik toko itu
+sendiri ingin memajukan ekonomi Anyer dan mendukung kemajuan
+anak-anak muda terutama untuk anak surfing. Oleh karena itu Toko
+Waveblast lebih mengambil konsep surfing.</li>
                                 
                             </ul>
                         </div>
