--- a/contact.html
+++ b/contact.html
@@ -138,7 +138,7 @@
                         </div>
                     </form>
                 </div> -->
-                <div class="col-lg-3 offset-lg-1">
+                <div class="row">
                     <div class="contact-widget">
                         <div class="cw-item">
                             <h5>Visi</h5>
