--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                 <nav class="main-menu mobile-menu">
                     <ul>
                         <li><a class="active" href="./index.html">Home</a></li>
-			    <li><a href="./contact.html">Contact</a></li>
+			    <li><a href="./contact.html">Visi & Misi</a></li>
                     </ul>
 		    
 			
